# transmogrifier

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: manual-testing.md  plan.md  release.md
fixtures/: gen_fixtures.sh
scripts/: prepare-sidecars.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: codec_args.rs  commands.rs  encoders.rs  exit.rs  ffmpeg_args.rs  ipc_constants.rs  lib.rs  main.rs  media_paths.rs  output_naming.rs  probe.rs  progress.rs  queue.rs  runner.rs  scheduler.rs  thumb_commands.rs  thumbs.rs
src-tauri/tests/: ffmpeg_integration.rs  golden_args.rs
src/components/: AdvancedPanel.tsx  ConflictDialog.tsx  ControlsBar.tsx  ExitDialog.tsx  FileRow.tsx  TrimPanel.tsx  UpdateBanner.tsx
src/lib/: advanced.test.ts  advanced.ts  batch.test.ts  batch.ts  constants.ts  encoders.test.ts  encoders.ts  fasttrim.test.ts  fasttrim.ts  ipc.ts  paths.test.ts  paths.ts  pool.test.ts  pool.ts  presets.test.ts  presets.ts  reconcile.test.ts  reconcile.ts  settings.ts  strings.ts  time.test.ts  time.ts
